tests/snapshots/parser_snapshots__quoting__ansi_c_quoting.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $'hello\\\\nworld'\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    AnsiCQuoted(
                        "hello\\nworld",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
