tests/snapshots/parser_snapshots__quoting__ansi_c_tab.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $'col1\\\\tcol2'\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    AnsiCQuoted(
                        "col1\\tcol2",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
