tests/snapshots/parser_snapshots__quoting__bare_dollar_sign.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "$",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
