tests/snapshots/parser_snapshots__quoting__double_quotes_with_command_sub.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo \\\"today is $(date)\\\"\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    DoubleQuoted(
                        [
                            Literal(
                                "today is ",
                            ),
                            CommandSubstitution(
                                "date",
                            ),
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
