tests/snapshots/parser_snapshots__quoting__escaped_quote_in_double_quotes.snap
---
source: tests/parser_snapshots.rs
expression: "parse(r#\"echo \"a \\\"quoted\\\" word\"\"#)"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    DoubleQuoted(
                        [
                            Literal(
                                "a \"quoted\" word",
                            ),
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
